--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ ol, ul{
 .square {
     background: #fff;
     border: 1px solid #999;
-    float: left0;
+    float: left;
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
@@ -46,5 +46,5 @@ ol, ul{
 }
 
 .game-info{
-    margin-left: 20px;
+    margin-left: 30px;
 }
