--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body{
     font: 24px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-    background-color: azure;
+    margin: 50px;
+    background-color: rgb(211, 211, 211);
 }
 
 ol, ul{
-    padding-left: 40px;
+    padding-left: 20px;
 }
 
 .board-row:after {
@@ -19,8 +19,8 @@ ol, ul{
 }
 
 .square {
-    background: rgb(189, 233, 255);
-    border: 1px solid #999;
+    background: rgb(238, 243, 245);
+    border: 1px solid #020202;
     float: left;
     font-size: 44px;
     font-weight: bold;
